Added a lot of css and html

--- a/index.html
+++ b/index.html
@@ -10,37 +10,35 @@
 </head>
 <body>
   
-  <header><h1>Nillan's World!</h1></header>
+  <header class = "bar"><h1 class = "page-title">Nillan's Winter Vacation!</h1></header>
   <nav>
-    <ul>
+    <ul class = "navigation">
       <li> Home </li>
-      <li><a href="contact/index.html">link</a></li> 
+      <li><a href="contact/index.html">Contact</a></li> 
     </ul>
     </nav>
     <main>
-      <ul>
-        <li>
+        <div class = "trip-text">
           <p>My Vietnam Trip</p>
-          <div><img src="imgs/img1.jpg" alt="Where they filmed King Kong"></div>
-        </li>
-        <li>  
           <p>Halong Bay</p>
+        </div>
+
+        <div class = "trip-imgs">
+          <img src="imgs/img1.jpg" alt="Where they filmed King Kong"></div>
           <div><img src="imgs/img2.jpg" alt = "Halong Bay"></div>
-        </li>
-      </ul>
-      <p>Email if you have questions</p>
+        </div>
+
+      <p class = "feedback">Email if you have questions</p>
   </main>
   <footer>
-    <div>    
+    <div class="review">    
       <img src="imgs/image-manu.png">
       <span>Image Manu - Awesome page, great work, keep it up!</span>
     </div>
-    <div>
+    <div class="review">
       <img src="imgs/image-max.png">
       <span>Image Max - Looks really nice, beautiful pictures!</span>
     </div>
   </footer>
-
-  </nav>
 </body>
 </html>
