--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel = "shortcut" href = "../imgs/favicon.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
 
 
 </head>
@@ -13,8 +13,8 @@
   <header><h1>Nillan's World!</h1></header>
   <nav>
     <ul>
-      <li> Home </li>
-      <li><a href="google.com">link</a></li> 
+      <li><a href="../index.html">Home</a> </li>
+      <li>Contact</li> 
     </ul>
     </nav>
 </body>
