Messing with a lot of css

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </div>
 
         <div class = "trip-imgs">
-          <img src="imgs/img1.jpg" alt="Where they filmed King Kong"></div>
-          <div><img src="imgs/img2.jpg" alt = "Halong Bay"></div>
+          <img src="imgs/img1.jpg" alt="Where they filmed King Kong">
+          <img src="imgs/img2.jpg" alt = "Halong Bay">
         </div>
 
-      <p class = "feedback">Email if you have questions</p>
+      <p class = "feedback">Contact if you have questions</p>
   </main>
   <footer>
     <div class="review">    
